# pyscripture

./: pyproject.toml
pyscripture/: books.py  download.py  parser.py
pyscripture/api/: app.py
pyscripture/church_api/: __init__.py  church_schema.py  uri_mappers.py  website_api_client.py
pyscripture/scripts/: build_footnotes_dataset.py  download_footnotes_dataset.py  train_sentence_transformer.py
tests/: test_books.py  test_download.py  test_parser.py
tests/church_api/: test_website_api_client.py
tests/test_api/: test_api.py
