[project]
name = "pyscripture"
version = "0.0.0"
description = "Store and manipulate scripture of the Church of Jesus Christ of Latter-day Saints as pandas dataframes."
authors = [
    { name = "Andrew Sansom", email = "andrew@euleriancircuit.com" },
]
license = { "text" = "MIT" }
readme = "README.md"
requires-python = ">=3.7"

keywords = ["pandas", "lds", "scripture", "bible", "holy bible", "book of mormon",
    "doctrine and covenants", "pearl of great price","holy scripture"
]

classifiers = [
    "Topic :: Software Development",
    "Development Status :: 3 - Alpha"
]

dependencies = [
    "pandas",
    "cache-pandas"
]

[project.optional-dependencies]
dev = [
    "black",
    "freezegun",
    "isort",
]

[project.urls]
homepage = "https://github.com/qthequartermasterman/pyscripture"
documentation = "https://github.com/qthequartermasterman/pyscripture"
repository = "https://github.com/qthequartermasterman/pyscripture"

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pyscripture"]

[tool.black]
line-length = 120
target_version = ['py38', 'py39', 'py310', 'py311']
